Created the signin and signup pages

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                                 <h4>FAQ?</h4>
                             </a>
                         </li>
+                        <li class="nav-item pr-2">
+                                <a class="nav-link" href="./signin.html">
+                                    <h4>Sign In</h4>
+                                </a>
+                            </li>
                         <li class="nav-item dropdown">
                         </li>
                     </ul>
