Added Live Clock and Date Display

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>RC SOUTH | HOME</title>
 </head>
 
-<body>
+<body  class="m-0">
+
     <!-- Addded to seperate footer from the body-->
     <div class=" mb-5  pb-3">
 
@@ -84,10 +85,13 @@
                         Most important, students have the option of remaining at the RC all four years while completing
                         their undergraduate education.</p>
                 </div>
+                <div id="text"></div>
+
+                <!-- Apply Now Button -->
                 <div class="box2 mb-5">
-                    <form action="https://studenthousing.olemiss.edu/apply">
+                    <!-- <form > -->
                         <button class="btn btn-dark btn-lg mt-2">Apply Now!</button>
-                    </form>
+                    <!-- </form> -->
 
                 </div>
 
@@ -105,9 +109,13 @@
     <!-- body part of the website ends -->
 
     <!-- Footer begins -->
-    <footer class="bg-dark footer text-white text-center py-3">
+    <footer class="bg-dark text-white text-center pt-2 ml-auto">
+        <div > Copyright 2019 - RCS</div>
+        <div id="day"class=""   >Day</div>
+        <div id="time" class="">Time</div>
 
-        <p> Copyright 2019 - Residential College South</p>
+        
+
     </footer>
 
     <!-- Bootstrap javascripts -->
@@ -120,6 +128,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <script src=main.js></script>
 
 </body>
 
