--- a/signin.html
+++ b/signin.html
@@ -52,10 +52,11 @@
                             </a>
                         </li>
                         <li class="nav-item pr-2">
-                            <a class="nav-link" href="./signup.html">
+                            <a class="nav-link" href="./signin.html">
                                 <h4>Sign In</h4>
                             </a>
                         </li>
+                       
                         <li class="nav-item dropdown">
                         </li>
                     </ul>
@@ -85,10 +86,10 @@
                                     required>
                             </div>
 
-                            <button class="btn btn-lg btn-primary btn-block text-uppercase my-5 " type="submit">Sign
+                            <button class="btn btn-lg btn-primary btn-block text-uppercase my-5 " id="signInButton" type="submit">Sign
                                 in</button>
 
-                            <div> <a href="./signup.html"> Don't have an account?</a></div>
+                            <div id="hello"> <a href="./signup.html"> Don't have an account?</a></div>
 
                         </form>
                     </div>
@@ -96,6 +97,32 @@
 
             </div>
         </div>
+        </div>
+        <footer class="bg-dark text-white text-center pt-2 ml-auto">
+                <div > Copyright 2019 - RCS</div>
+                <div id="day"class=""   >Day</div>
+                <div id="time" class="">Time</div>
+        </footer>
+    
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+        <script src=main.js></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-firestore.js"></script>
+
+
+
+        <script src=auth.js></script>
 
 </body>
 
