--- a/facilities.html
+++ b/facilities.html
@@ -49,11 +49,26 @@
                                 <h4>Staff</h4>
                             </a>
                         </li>
-                        <li class="nav-item pr-2">
+                        <li class="nav-item pr-2 ">
                             <a class="nav-link" href="./faq.html">
                                 <h4>FAQ?</h4>
                             </a>
                         </li>
+                        <li class="nav-item pr-2 signinlink">
+                                <a class="nav-link" href="./signup.html">
+                                    <h4>Sign In</h4>
+                                </a>
+                            </li>
+                            <li class="nav-item active pr-2 hide-display applylink" >
+                                <a class="nav-link" href="./apply.html">
+                                    <h4>Apply Now!</h4>
+                                </a>
+                            </li>
+                            <li class="nav-item pr-2 hide-display" id="logoutlink">
+                                <a class="nav-link">
+                                    <h4>Logout</h4>
+                                </a>
+                            </li>
                         <li class="nav-item dropdown">
                         </li>
                     </ul>
@@ -156,8 +171,10 @@
     </div>
 
     <!-- Footer begins -->
-    <footer class="bg-dark footer text-white text-center py-3">
-        <p> Copyright 2019 - Residential College South</p>
+    <footer class="bg-dark text-white text-center pt-2 ml-auto">
+            <div > Copyright 2019 - RCS</div>
+            <div id="day"class=""   >Day</div>
+            <div id="time" class="">Time</div>
     </footer>
 
     <!-- Bootstrap js -->
@@ -170,6 +187,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+            <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-firestore.js"></script>
+
+
+    <script src=js/key.js> </script> 
+    <script src=js/facilities.js> </script>
+    <script src=js/auth.js></script>
+    <script src=js/time.js></script>
+
 
 </body>
 
