--- a/staff.html
+++ b/staff.html
@@ -46,9 +46,24 @@
                                 <h4>Staff</h4><span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item pr-2">
+                        <li class="nav-item pr-2  ">
                             <a class="nav-link" href="./faq.html">
                                 <h4>FAQ?</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item pr-2 signinlink">
+                            <a class="nav-link" href="./signup.html">
+                                <h4>Sign In</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item active pr-2 hide-display applylink">
+                            <a class="nav-link" href="./apply.html">
+                                <h4>Apply Now!</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item pr-2 hide-display" id="logoutlink">
+                            <a class="nav-link">
+                                <h4>Logout</h4>
                             </a>
                         </li>
                         <li class="nav-item dropdown">
@@ -166,9 +181,12 @@
     </div>
     <!-- Main Body ends-->
     <!-- Footer -->
-    <footer class="bg-dark footer text-white text-center py-3">
-        <p> Copyright 2019 - Residential College South</p>
+    <footer class="bg-dark text-white text-center pt-2 ml-auto">
+        <div> Copyright 2019 - RCS</div>
+        <div id="day" class="">Day</div>
+        <div id="time" class="">Time</div>
     </footer>
+
 
     <!-- Bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -180,7 +198,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-firestore.js"></script>
 
-</body>
 
-</html>
+    <script src="js/key.js"> </script> <script src="js/auth.js"></script>
+    <script src="js/time.js"> </script> </body> </html>
