--- a/facilities.html
+++ b/facilities.html
@@ -24,61 +24,65 @@
 
         <!-- header starts -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-                <a class="navbar-brand" href="./index.html">
-                    <h2>RC South</h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto mr-5 ">
-                        <li class="nav-item pr-2">
-                            <a class="nav-link " href="./index.html">
-                                <h4>Home</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item active pr-2">
-                            <a class="nav-link" href="./facilities.html">
-                                <h4>Facilites</h4><span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2">
-                            <a class="nav-link" href="./staff.html">
-                                <h4>Staff</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2 ">
-                            <a class="nav-link" href="./faq.html">
-                                <h4>FAQ?</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2 signinlink">
-                                <a class="nav-link" href="./signup.html">
-                                    <h4>Sign In</h4>
-                                </a>
-                            </li>
-                            <li class="nav-item active pr-2 hide-display applylink" >
-                                <a class="nav-link" href="./apply.html">
-                                    <h4>Apply Now!</h4>
-                                </a>
-                            </li>
-                            <li class="nav-item pr-2 hide-display" id="logoutlink">
-                                <a class="nav-link">
-                                    <h4>Logout</h4>
-                                </a>
-                            </li>
-                        <li class="nav-item dropdown">
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <!-- Page Information Display Bar -->
-            <nav class=" navbar-light p-1 bg-dark text-white">
-                <h2> Facilites</h2>
-            </nav>
-
+                <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+                        <a class="navbar-brand" href="./index.html">
+                            <h2>RC South</h2>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav ml-auto mr-5 ">
+                                <li class="nav-item pr-2">
+                                    <a class="nav-link " href="./index.html">
+                                        <h4>Home</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item  pr-2 active">
+                                    <a class="nav-link" href="./facilities.html">
+                                        <h4>Facilites</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item  pr-2">
+                                    <a class="nav-link" href="./staff.html">
+                                        <h4>Staff</h4><span class="sr-only">(current)</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2  ">
+                                    <a class="nav-link" href="./faq.html">
+                                        <h4>FAQ?</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2 hide-display contactlink">
+                                    <a class="nav-link" href="./contact.html">
+                                        <h4>Contact </h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2  applylink">
+                                        <a class="nav-link" href="./apply.html">
+                                            <h4>Apply</h4>
+                                        </a>
+                                    </li>
+                                <li class="nav-item pr-2 signinlink">
+                                    <a class="nav-link" href="./signup.html">
+                                        <h4>Sign In</h4>
+                                    </a>
+                                </li>
+                                
+                                <li class="nav-item pr-2 hide-display" id="logoutlink">
+                                    <a class="nav-link">
+                                        <h4>Logout</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <nav class=" navbar-light p-1 bg-dark text-white">
+                            <h2> RC South Facilities</h2>
+                        </nav>
         </header>
 
         <!-- Header ends -->
