--- a/index.html
+++ b/index.html
@@ -18,61 +18,66 @@
 <body class="m-0">
 
     <!-- Addded to seperate footer from the body-->
-    <div class=" mb-5  pb-3">
+    <div class=" mb-5  pb-5">
 
         <!-- header starts -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-                <a class="navbar-brand" href="./index.html">
-                    <h2>RC South</h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto mr-5 ">
-                        <li class="nav-item pr-2">
-                            <a class="nav-link active" href="./index.html">
-                                <h4>Home</h4><span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item  pr-2">
-                            <a class="nav-link" href="./facilities.html">
-                                <h4>Facilites</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2">
-                            <a class="nav-link" href="./staff.html">
-                                <h4>Staff</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2">
-                            <a class="nav-link" href="./faq.html">
-                                <h4>FAQ?</h4>
-                            </a>
-                        </li>
-                      
-                        <li class="nav-item pr-2 signinlink">
-                            <a class="nav-link" href="./signup.html">
-                                <h4>Sign In</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item active pr-2 hide-display applylink" >
-                            <a class="nav-link" href="./apply.html">
-                                <h4>Apply Now!</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item pr-2 hide-display" id="logoutlink">
-                            <a class="nav-link">
-                                <h4>Logout</h4>
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+                        <a class="navbar-brand" href="./index.html">
+                            <h2>RC South</h2>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav ml-auto mr-5 ">
+                                <li class="nav-item pr-2  active">
+                                    <a class="nav-link " href="./index.html">
+                                        <h4>Home</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item  pr-2 ">
+                                    <a class="nav-link" href="./facilities.html">
+                                        <h4>Facilites</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item  pr-2">
+                                    <a class="nav-link" href="./staff.html">
+                                        <h4>Staff</h4><span class="sr-only">(current)</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2  ">
+                                    <a class="nav-link" href="./faq.html">
+                                        <h4>FAQ?</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2 hide-display contactlink">
+                                    <a class="nav-link" href="./contact.html">
+                                        <h4>Contact </h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item pr-2  applylink">
+                                        <a class="nav-link" href="./apply.html">
+                                            <h4>Apply</h4>
+                                        </a>
+                                    </li>
+                                <li class="nav-item pr-2 signinlink">
+                                    <a class="nav-link" href="./signup.html">
+                                        <h4>Sign In</h4>
+                                    </a>
+                                </li>
+                                
+                                <li class="nav-item pr-2 hide-display" id="logoutlink">
+                                    <a class="nav-link">
+                                        <h4>Logout</h4>
+                                    </a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
         </header>
         <!-- header ends -->
 
@@ -125,7 +130,7 @@
     <!-- body part of the website ends -->
 
     <!-- Footer begins -->
-    <footer class="bg-dark footer text-white text-center pt-2 ">
+    <footer class="bg-dark footer text-white text-center pt-2 " id="foot">
         <div> Copyright 2019 - RCS</div>
         <div id="day" class="">Day</div>
         <div id="time" class="">Time</div>
@@ -150,10 +155,10 @@
       <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-firestore.js"></script>
   
   
-      <script src=js/key.js> </script> <script src="js/auth.js"></script>
+      <script src="js/key.js"> </script> <script src="js/auth.js"></script>
 
-      <script src=js/time.js> </script> 
-
+      <script src="js/time.js"> </script> 
+    <script src="js/cookie.js"></script>
 
 </body>
 
